--- a/index.html
+++ b/index.html
@@ -8,6 +8,16 @@
     </head>
     <body>
         <h1>Welcome to my AI Generator</h1>
+        <footer>
+            This project was coded by
+            <a href="https://github.com/Stace113" target="_blank"
+                >Stace Watkins</a
+            >
+            and is open-sourced on
+            <a href="https://github.com/Stace113/AI-Generator" target="_blank"
+                >GitHub</a
+            >
+        </footer>
     </body>
     <script src="src/index.js"></script>
 </html>
