added netflify hosting

--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
             <a href="https://github.com/Stace113/AI-Generator" target="_blank"
                 >GitHub</a
             >
+            and is hosted on
+            <a href="https://sw-ai-generator.netlify.app/" target="_blank"
+                >Netlify</a
+            >
         </footer>
     </body>
     <script src="src/index.js"></script>
