small changes to footer

--- a/index.html
+++ b/index.html
@@ -12,14 +12,12 @@
             This project was coded by
             <a href="https://github.com/Stace113" target="_blank"
                 >Stace Watkins</a
-            >
-            and is open-sourced on
+            >. It is
             <a href="https://github.com/Stace113/AI-Generator" target="_blank"
-                >GitHub</a
-            >
-            and is hosted on
+                >open-sourced on GitHub</a
+            >, and is
             <a href="https://sw-ai-generator.netlify.app/" target="_blank"
-                >Netlify</a
+                >hosted on Netlify</a
             >
         </footer>
     </body>
