added header element, and included main & form

--- a/index.html
+++ b/index.html
@@ -7,7 +7,21 @@
         <title>AI Generator</title>
     </head>
     <body>
-        <h1>Welcome to my AI Generator</h1>
+        <header>
+            <h1>Welcome to my AI Generator</h1>
+        </header>
+        <main>
+            <form>
+                <input
+                    type="text"
+                    placeholder="Enter a topic"
+                    autofocus
+                    required
+                    autocomplete="off"
+                />
+                <input type="submit" />
+            </form>
+        </main>
         <footer>
             This project was coded by
             <a href="https://github.com/Stace113" target="_blank"
