added div under form ready for input

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
                 />
                 <input type="submit" />
             </form>
+            <div>
+                ....
+                <br />
+                ....
+            </div>
         </main>
         <footer>
             This project was coded by
