--- a/index.html
+++ b/index.html
@@ -7,38 +7,42 @@
         <title>AI Generator</title>
     </head>
     <body>
-        <header>
-            <h1>Welcome to my AI Generator</h1>
-        </header>
-        <main>
-            <form>
-                <input
-                    type="text"
-                    placeholder="Enter a topic"
-                    autofocus
-                    required
-                    autocomplete="off"
-                />
-                <input type="submit" />
-            </form>
-            <div>
-                ....
-                <br />
-                ....
-            </div>
-        </main>
-        <footer>
-            This project was coded by
-            <a href="https://github.com/Stace113" target="_blank"
-                >Stace Watkins</a
-            >. It is
-            <a href="https://github.com/Stace113/AI-Generator" target="_blank"
-                >open-sourced on GitHub</a
-            >, and is
-            <a href="https://sw-ai-generator.netlify.app/" target="_blank"
-                >hosted on Netlify</a
-            >
-        </footer>
+        <div class="container">
+            <header>
+                <h1>Welcome to my AI Generator</h1>
+            </header>
+            <main>
+                <form>
+                    <input
+                        type="text"
+                        placeholder="Enter a topic"
+                        autofocus
+                        required
+                        autocomplete="off"
+                    />
+                    <input type="submit" />
+                </form>
+                <div>
+                    ....
+                    <br />
+                    ....
+                </div>
+            </main>
+            <footer>
+                This project was coded by
+                <a href="https://github.com/Stace113" target="_blank"
+                    >Stace Watkins</a
+                >. It is
+                <a
+                    href="https://github.com/Stace113/AI-Generator"
+                    target="_blank"
+                    >open-sourced on GitHub</a
+                >, and is
+                <a href="https://sw-ai-generator.netlify.app/" target="_blank"
+                    >hosted on Netlify</a
+                >
+            </footer>
+        </div>
     </body>
     <script src="src/index.js"></script>
 </html>
