--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
             <header>
                 <h1>Welcome to my AI Generator</h1>
             </header>
+            <br />
+            <br />
+            <br />
             <main>
                 <form>
                     <input
@@ -28,18 +31,25 @@
                     ....
                 </div>
             </main>
+            <br />
+            <br />
+            <br />
+            <br />
+            <br />
+            <hr />
+            <br />
             <footer>
                 This project was coded by
                 <a href="https://github.com/Stace113" target="_blank"
-                    >Stace Watkins</a
+                    ><strong>Stace Watkins</strong></a
                 >. It is
                 <a
                     href="https://github.com/Stace113/AI-Generator"
                     target="_blank"
-                    >open-sourced on GitHub</a
+                    ><strong>open-sourced on GitHub</strong></a
                 >, and is
                 <a href="https://sw-ai-generator.netlify.app/" target="_blank"
-                    >hosted on Netlify</a
+                    ><strong>hosted on Netlify</strong></a
                 >
             </footer>
         </div>
