--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
     <body>
         <div class="container">
             <header>
-                <h1>Welcome to my AI Generator</h1>
+                <h1>AI Generator</h1>
             </header>
-            <br />
-            <br />
-            <br />
+
             <main>
                 <form>
                     <input
@@ -22,20 +20,17 @@
                         autofocus
                         required
                         autocomplete="off"
+                        class="instructions"
                     />
-                    <input type="submit" />
+                    <input type="submit" class="submit-button" />
                 </form>
-                <div>
+                <div class="answer">
                     ....
                     <br />
                     ....
                 </div>
             </main>
-            <br />
-            <br />
-            <br />
-            <br />
-            <br />
+
             <hr />
             <br />
             <footer>
