--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="src/style.css" />
-        <title>AI Generator</title>
+        <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+        <title>AI Poem Generator</title>
     </head>
     <body>
         <div class="container">
             <header>
-                <h1>AI Generator</h1>
+                <h1>AI Poem Generator</h1>
             </header>
 
             <main>
-                <form>
+                <form id="generator-form">
                     <input
                         type="text"
                         placeholder="Enter a topic"
@@ -24,11 +25,7 @@
                     />
                     <input type="submit" class="submit-button" />
                 </form>
-                <div class="answer">
-                    ....
-                    <br />
-                    ....
-                </div>
+                <div class="poem" id="poem"></div>
             </main>
 
             <hr />
