--- a/index.html
+++ b/index.html
@@ -15,21 +15,29 @@
             </header>
 
             <main>
-                <form id="generator-form">
-                    <input
-                        type="text"
-                        placeholder="Enter a topic"
-                        autofocus
-                        required
-                        autocomplete="off"
-                        class="instructions"
-                        id="user-instructions"
-                    />
-                    <input type="submit" class="submit-button" />
-                </form>
-                <div class="poem" id="poem"></div>
+                <div class="form-box">
+                    <form id="generator-form">
+                        <input
+                            type="text"
+                            placeholder="Enter a one word topic"
+                            autofocus
+                            required
+                            autocomplete="off"
+                            class="instructions"
+                            id="user-instructions"
+                        />
+                        <input type="submit" class="submit-button" />
+                    </form>
+                </div>
+                <div>
+                    <small class="example"
+                        >e.g. flowers, cheese, dogs etc</small
+                    >
+                </div>
+                <div class="poem hidden" id="poem"></div>
             </main>
-
+            <br />
+            <br />
             <hr />
             <br />
             <footer>
