--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
                 </div>
                 <div>
                     <small class="example"
-                        >e.g. flowers, cheese, dogs etc</small
+                        >e.g. flowers, cheese, dogs etc or insert an
+                        emoji</small
                     >
                 </div>
                 <div class="poem hidden" id="poem"></div>
